# substrate-node-template-3.0.0-monthly-2021-08

./: .gitignore  Cargo.lock.back  Cargo.toml  customSpec.json  customSpecRaw.json  customSpecRaw_test.json  customSpecRaw_test_noauthnode.json  customSpecRaw_test_node_auth.json  customSpec_test_1.json  customSpec_test_noauthnode.json  customSpec_test_node_auth.json  my-staging-spec-Raw.json  my-staging-spec.json  node-permission.txt  node-start-session.sh  node1-aura  node1-gran  node2-aura  node2-gran  pallet-session_expand.rs  sp-finality-grandpa_expand.rs  substrat_rbac_expand.rs  types.json
arrform/: readme.md
frontend/: .gitignore
frontend/.yarn/: build-state.yml
frontend/src/: Kitties.js
js-component/: index.js
node/: Cargo.toml
node/examples/: bs58test.rs
node/src/: chain_spec.rs  main.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
pallets/poe/: Cargo.toml  Cargo.toml.del
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  pallet-poe.expand.rs  pallet-poe.test.expand.rs  tests.rs  weights.rs
pallets/simplestore/: Cargo.toml  README.md
pallets/simplestore/src/: lib.rs
pallets/substrate-rbac/: Cargo.toml
pallets/substrate-rbac/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
pallets/validator-set/: Cargo.toml  readme.md
pallets/validator-set/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
